#748 Removed usage of already deprecated mycore api